--- a/Dockerfile.build
+++ b/Dockerfile.build
@@ -1,6 +1,6 @@
 FROM nexus3.edgexfoundry.org:10003/edgex-docs-builder:latest
 
-ARG STREAM=master
+ARG STREAM=fuji
 
 ENV RAML_FILES="core-data.raml \
   core-metadata.raml \
