--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,6 +10,7 @@ copyright: 'Copyright &copy; 2020 EdgeX Foundry'
 # google_analytics:
 #   - 'UA-82811140-6'
 #   - 'auto'
+strict: true
 theme:
   name: 'material'
   logo: 'assets/logo_edgex.png'
