docs: fixing incorrect path in nav
Signed-off-by: Michael Johanson <michael.johanson@intel.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -24,7 +24,7 @@ nav:
   - 'index.md'
   - Getting Started:
       - './getting-started/index.md'
-      - Quick Start: 'getting-started\quick-start\index.md'
+      - Quick Start: './getting-started/quick-start/index.md'
       - Users:
         - './getting-started/Ch-GettingStartedUsers.md'
       - Developers:
