docs: remove unnecessary files and structure ADRs
Signed-off-by: Mike <mjohanson@gesdate.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -106,8 +106,7 @@ nav:
     - './api/Ch-APISystemManagement.md'
   - Architectural Decision Records:
     - './design/README.md'
-    - Current Design:
-      - './design/adr/README.md'
+    - './design/TOC.md'
     - Legacy:
       - './design/legacy-design/README.md'
       - './design/legacy-requirements/README.md'
