docs: add google analytics tracking
Signed-off-by: Mike <michael.johanson@intel.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,9 +7,9 @@ site_url: 'https://edgexfoundry.github.io/edgex-docs/'
 repo_url: 'https://github.com/edgexfoundry/edgex-go'
 repo_name: 'edgex/edgex-go'
 copyright: 'Copyright &copy; 2020 EdgeX Foundry'
-# google_analytics:
-#   - 'UA-82811140-6'
-#   - 'auto'
+google_analytics:
+  - 'UA-82811140-6'
+  - 'auto'
 strict: true
 theme:
   name: 'material'
