--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -13,13 +13,13 @@ google_analytics:
 strict: true
 theme:
   name: 'material'
-  logo: 'assets/logo_edgex.png'
+  logo: 'assets/logo_edgex_white.png'
   favicon: 'assets/logo_edgex.png'
-  feature:
-    tabs: true
-  palette:
-    primary: 'deep purple'
-    accent: 'red'
+  features:
+    - tabs
+  # palette:
+  #   primary: 'deep purple'
+  #   accent: 'red'
 nav:
   - 'index.md'
   - Getting Started:
@@ -116,13 +116,14 @@ markdown_extensions:
   # - mdx_truly_sane_lists
 extra:
   social:
-    - type: 'github'
+    - icon: 'fontawesome/brands/github-alt'
       link: 'https://github.com/edgexfoundry'
-    - type: 'twitter'
+    - icon: 'fontawesome/brands/twitter'
       link: 'https://twitter.com/edgexfoundry'
-    - type: 'linkedin'
+    - icon: 'fontawesome/brands/linkedin'
       link: 'https://www.linkedin.com/company/edgexfoundry'
 extra_css:
 - assets\stylesheets\version-select.css
+- assets\stylesheets\branding.css
 extra_javascript:
 - assets\javascripts\version-select.js
