fixes #144 #143 - add Kuiper documentation and add indication that Drools Support Rules Engine service is deprecated
Signed-off-by: Jim White <jpwhite_mn@yahoo.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -44,6 +44,7 @@ nav:
         - './microservices/support/logging/Ch-Logging.md'
         - './microservices/support/notifications/Ch-AlertsNotifications.md'
         - './microservices/support/rulesengine/Ch-RulesEngine.md'
+        - './microservices/support/Kuiper/Ch-Kuiper.md'
         - './microservices/support/scheduler/Ch-Scheduling.md'
       - System Management:
         - './microservices/system-management/agent/Ch_SysMgmtAgent.md'
