doc: Application Services updates for Geneva
Tweaks for Geneva and restored prevoius chnages that were lost when docs got moved.

closes #153

Signed-off-by: lenny <leonard.goodell@intel.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -59,12 +59,11 @@ nav:
         - './microservices/device/profile/Ch-DeviceProfile.md'
         - './microservices/device/sdk/Ch-DeviceSDK.md'
         - './microservices/device/virtual/Ch-VirtualDevice.md'
-      - App Services:
-        - Introduction: './microservices/application/ApplServices.md'
-        - './microservices/application/ApplicationServices.md'
+      - Application Services:
+        - Introduction: './microservices/application/ApplicationServices.md'
         - Triggers: './microservices/application/Triggers.md'
-        - './microservices/application/AppServiceConfigurable.md'
         - './microservices/application/ApplicationFunctionsSDK.md'
+        - './microservices/application/AppServiceConfigurable.md'
       - './microservices/configuration/Ch-Configuration.md'
   - Examples and Tutorials:
     - './examples/Ch-ExamplesProvisionDevice.md'
