Create sdk api docs and remove version on swagger url
Signed-off-by: Cherry Wang <cherry@iotechsys.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -100,8 +100,9 @@ nav:
       - './api/supporting/Ch-APISupportingServicesLogging.md'
       - './api/supporting/Ch-APISupportingServicesRulesEngine.md'
       - './api/supporting/Ch-APISupportingServicesScheduling.md'
-    - './api/Ch-APIDeviceServicesVirtual.md'
+    - './api/Ch-APIDeviceSDK.md'
     - './api/Ch-APISystemManagement.md'
+    - './api/Ch-APIAppFunctionsSDK.md'
   - Architectural Decision Records:
     - './design/README.md'
     - './design/TOC.md'
