changes and corrections per review of @rsdmike
Signed-off-by: Jim White <jpwhite_mn@yahoo.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -12,7 +12,7 @@ google_analytics:
   - 'auto'
 strict: true
 theme:
-  name: 'mkdocs'
+  name: 'material'
   logo: 'assets/logo_edgex_white.png'
   favicon: 'assets/logo_edgex.png'
   features:
@@ -110,7 +110,8 @@ nav:
     - Legacy:
       - './design/legacy-design/README.md'
       - './design/legacy-requirements/README.md'
-  - './general/Definitions.md'
+  - Definitions:
+      - './general/Definitions.md'
 markdown_extensions:
   - codehilite
   - admonition
