moved definitions to category to introductions; changed 'actuateable'
Signed-off-by: Jim White <jpwhite_mn@yahoo.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -18,7 +18,9 @@ theme:
   features:
     - tabs
 nav:
-  - 'index.md'
+  - Introduction:
+    - 'index.md'
+    - './general/Definitions.md'
   - Getting Started:
       - './getting-started/index.md'
       - Quick Start: './getting-started/quick-start/index.md'
@@ -110,8 +112,6 @@ nav:
     - Legacy:
       - './design/legacy-design/README.md'
       - './design/legacy-requirements/README.md'
-  - Definitions:
-      - './general/Definitions.md'
 markdown_extensions:
   - codehilite
   - admonition
