--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -65,7 +65,12 @@ nav:
       - Application Services:
         - Introduction: './microservices/application/ApplicationServices.md'
         - Triggers: './microservices/application/Triggers.md'
-        - './microservices/application/ApplicationFunctionsSDK.md'
+        - Application Functions SDK:
+            - './microservices/application/ApplicationFunctionsSDK.md'
+            - Context API: './microservices/application/ContextAPI.md'
+            - './microservices/application/BuiltIn.md'
+            - './microservices/application/ErrorHandling.md'
+            - './microservices/application/AdvancedTopics.md'
         - './microservices/application/AppServiceConfigurable.md'
         - './microservices/application/GeneralAppServiceConfig.md'
       - './microservices/configuration/Ch-Configuration.md'
@@ -115,6 +120,8 @@ nav:
 markdown_extensions:
   - codehilite
   - admonition
+  - pymdownx.superfences
+  - pymdownx.mark
   # - mdx_truly_sane_lists
 extra:
   social:
