fixes #24; clean up of getting started page and added getting started for snap users page
Signed-off-by: Jim White <jpwhite_mn@yahoo.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -26,6 +26,7 @@ nav:
       - Quick Start: './getting-started/quick-start/index.md'
       - Users:
         - './getting-started/Ch-GettingStartedUsers.md'
+        - './getting-started/Ch-GettingStartedSnapUsers.md'
       - Developers:
         - './getting-started/Ch-GettingStartedDevelopers.md'
         - './getting-started/Ch-GettingStartedGoDevelopers.md'
