Fixes #38; update and clean up of the Getting Started Developers page, Getting Started Go Developers page
Signed-off-by: Jim White <jpwhite_mn@yahoo.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -30,6 +30,7 @@ nav:
       - Developers:
         - './getting-started/Ch-GettingStartedDevelopers.md'
         - './getting-started/Ch-GettingStartedGoDevelopers.md'
+        - './getting-started/Ch-GettingStartedCDevelopers.md'
         - './getting-started/Ch-GettingStartedHybrid.md'
         - Application Functions SDK: './getting-started/ApplicationFunctionsSDK.md'
         - Device Services:
