update to the micro services core data page; including more detail and updated to Geneva schemas
Signed-off-by: Jim White <jpwhite_mn@yahoo.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -40,6 +40,7 @@ nav:
         - './getting-started/Ch-GettingStartedUsersNexus.md'
   - Microservices:
       - Core Services:
+        - './microservices/core/Ch-CoreServices.md'
         - './microservices/core/data/Ch-CoreData.md'
         - './microservices/core/metadata/Ch-Metadata.md'
         - './microservices/core/command/Ch-Command.md'
