--- a/docs_src/getting-started/configuration.toml
+++ b/docs_src/getting-started/configuration.toml
@@ -1,56 +1,60 @@
+[Writable]
+LogLevel = 'INFO'
+
 [Service]
-Host = "localhost"
-Port = 49992
-ConnectRetries = 3
+BootTimeout = 30000
+CheckInterval = '10s'
+Host = 'localhost'
+ServerBindAddr = ''  # blank value defaults to Service.Host value
+Port = 49992  #modified to be different than existing device services
+Protocol = 'http'
+StartupMsg = 'device simple started'
+Timeout = 20000
+ConnectRetries = 20
 Labels = []
-OpenMsg = "device simple started"
-MaxResultCount = 50000
-Timeout = 5000
 EnableAsyncReadings = true
 AsyncBufferSize = 16
 
 [Registry]
 Host = "localhost"
 Port = 8500
-CheckInterval = "10s"
-FailLimit = 3
-FailWaitTime = 10
+Type = 'consul'
 
 [Clients]
   [Clients.Data]
-  Name = "edgex-core-data"
-  Protocol = "http"
-  Host = "localhost"
+  Protocol = 'http'
+  Host = 'localhost'
   Port = 48080
-  Timeout = 5000
 
   [Clients.Metadata]
-  Name = "edgex-core-metadata"
-  Protocol = "http"
-  Host = "localhost"
+  Protocol = 'http'
+  Host = 'localhost'
   Port = 48081
-  Timeout = 5000
 
   [Clients.Logging]
-  Name = "edgex-support-logging"
-  Protocol = "http"
-  Host = "localhost"
+  Protocol = 'http'
+  Host = 'localhost'
   Port = 48061
+
 
 [Device]
   DataTransform = true
-  InitCmd = ""
-  InitCmdArgs = ""
+  InitCmd = ''
+  InitCmdArgs = ''
   MaxCmdOps = 128
   MaxCmdValueLen = 256
-  RemoveCmd = ""
-  RemoveCmdArgs = ""
-  ProfilesDir = "./res"
+  RemoveCmd = ''
+  RemoveCmdArgs = ''
+  ProfilesDir = './res'
+  UpdateLastConnected = false
+  [Device.Discovery]
+    Enabled = false
+    Interval = '30s'
 
+# Remote and file logging disabled so only stdout logging is used
 [Logging]
 EnableRemote = false
-File = "./device-simple.log"
-Level = "DEBUG"
+File = ''
 
 # Pre-define Devices
 [[DeviceList]]
@@ -61,7 +65,7 @@ Level = "DEBUG"
   [DeviceList.Protocols]
     [DeviceList.Protocols.Other]
       Address = "random"
-      Port = 300
+      Port = "300"
   [[DeviceList.AutoEvents]]
     Resource = "Random"
     OnChange = false
