--- a/docs_src/getting-started/random-generator-device.yaml
+++ b/docs_src/getting-started/random-generator-device.yaml
@@ -14,16 +14,9 @@ deviceResources:
             { type: "random" }
         properties:
             value:
-                { type: "INT32", readWrite: "R", defaultValue: "0.00", minimum: "0.00", maximum: "100.00"  }
+                { type: "int32", readWrite: "R" }
             units:
-                { type: "String", readWrite: "R", defaultValue: "" }
-
-deviceCommands:
-    -
-        name: "Random"
-        get:
-            -
-                { operation: "get", object: "randomnumber", property: "value", parameter: "Random" }
+                { type: "String", readWrite: "R" }
 
 coreCommands:
   -
