fixes #143 and #148; cleaned up rules pages; added Kuiper example page from Rocky
Signed-off-by: Jim White <jpwhite_mn@yahoo.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -83,6 +83,7 @@ nav:
     - './examples/Ch-ExamplesRandomDeviceService.md'
     - './examples/Ch-ExamplesSendingAndConsumingBinary.md'
     - './examples/AppServiceExamples.md'
+    - './examples/Ch-CommandingDeviceThroughRulesEngine.md'
     - Adding a Device:
       - './examples/Ch-ExamplesAddingModbusDevice.md'
       - './examples/Ch-ExamplesAddingSNMPDevice.md'
