update the microservice system management page
Signed-off-by: Jim White <jpwhite_mn@yahoo.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -51,7 +51,9 @@ nav:
         - './microservices/support/Kuiper/Ch-Kuiper.md'
         - './microservices/support/scheduler/Ch-Scheduling.md'
       - System Management:
+        - './microservices/system-management/Ch_SystemManagement.md'
         - './microservices/system-management/agent/Ch_SysMgmtAgent.md'
+        - './microservices/system-management/executor/Ch_SysMgmtExecutor.md'
       - Security:
         - './microservices/security/Ch-Security.md'
         - './microservices/security/Ch-SecretStore.md'
