--- a/docs_src/getting-started/random-generator-device.yaml
+++ b/docs_src/getting-started/random-generator-device.yaml
@@ -20,7 +20,7 @@ deviceResources:
 
 coreCommands:
   -
-    name: "Random"
+    name: "randomnumber"
     get:
         path: "/api/v1/device/{deviceId}/Random"
         responses:
