fixes for device service host IP address and deviceCommand issue as identified by @kb2ma and @cloudxxx8
Signed-off-by: Jim White <jpwhite_mn@yahoo.com>

--- a/docs_src/getting-started/configuration.toml
+++ b/docs_src/getting-started/configuration.toml
@@ -4,7 +4,7 @@ LogLevel = 'INFO'
 [Service]
 BootTimeout = 30000
 CheckInterval = '10s'
-Host = 'localhost'
+Host = '172.17.0.1'  # set this to the IP address of the system host
 ServerBindAddr = ''  # blank value defaults to Service.Host value
 Port = 49992  #modified to be different than existing device services
 Protocol = 'http'
