--- a/docs_src/getting-started/random-generator-device.yaml
+++ b/docs_src/getting-started/random-generator-device.yaml
@@ -18,6 +18,12 @@ deviceResources:
             units:
                 { type: "String", readWrite: "R" }
 
+deviceCommands:
+-
+  name: "randomnumber"
+  get:
+  - { operation: "get", deviceResource: "randomnumber" }
+
 coreCommands:
   -
     name: "randomnumber"
