--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -93,7 +93,6 @@ nav:
     - Walkthrough:
       - 'walk-through/Ch-Walkthrough.md'
       - 'walk-through/Ch-WalkthroughSetup.md'
-      - 'walk-through/Ch-WalkthroughRunning.md'
       - 'walk-through/Ch-WalkthroughUseCase.md'
       - 'walk-through/Ch-WalkthroughData.md'
       - 'walk-through/Ch-WalkthroughDeviceProfile.md'
@@ -129,6 +128,7 @@ markdown_extensions:
   - pymdownx.tabbed
   - pymdownx.superfences
   - pymdownx.mark
+  - attr_list
   # - mdx_truly_sane_lists
 extra:
   social:
