docs(examples): add Jonas Werner Tutorial to examples and tutorials
Signed-off-by: Jim White <jpwhite_mn@yahoo.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -102,6 +102,7 @@ nav:
       - 'walk-through/Ch-WalkthroughCommands.md'
       - 'walk-through/Ch-WalkthroughReading.md'
       - 'walk-through/Ch-WalkthroughExporting.md'
+    - './examples/LinuxTutorial/LinuxTutorial.md'
   - API Reference: 
     - Core:
       - './api/core/Ch-APICoreCommand.md'
