docs(microservices): document the Events tags in a new cross cutting concern area of microservices
Signed-off-by: Jim White <jpwhite_mn@yahoo.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -38,6 +38,7 @@ nav:
           - './getting-started/Ch-GettingStartedSDK-Go.md'
         - './getting-started/Ch-GettingStartedUsersNexus.md'
   - Microservices:
+      - './microservices/general/index.md'
       - Core Services:
         - './microservices/core/Ch-CoreServices.md'
         - './microservices/core/data/Ch-CoreData.md'
