fix(ref): clean up all geneva specific references for hanoi
fixes:#293

changed references to Geneva compose files where it was easy to do

changed any place where Geneva was referenced as the latest release

made note where Geneva is used in examples that later releases do exist

added Redis guidance to core services (from the Wiki)

updated release cadence and future release names

Signed-off-by: Jim White <jpwhite_mn@yahoo.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -44,6 +44,7 @@ nav:
         - './microservices/core/data/Ch-CoreData.md'
         - './microservices/core/metadata/Ch-Metadata.md'
         - './microservices/core/command/Ch-Command.md'
+        - './microservices/core/database/Ch-Redis.md'
       - Supporting Services:
         - './microservices/support/Ch-SupportingServices.md'
         - './microservices/support/logging/Ch-Logging.md'
