feat(ref): add introductory CLI documenation page
fix: 297

documentation provided in non-MD format by @difince (see the issue)

Signed-off-by: Jim White <jpwhite_mn@yahoo.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -37,6 +37,8 @@ nav:
           - './getting-started/Ch-GettingStartedSDK-C.md'
           - './getting-started/Ch-GettingStartedSDK-Go.md'
         - './getting-started/Ch-GettingStartedUsersNexus.md'
+      - Tools:
+        - './getting-started/tools/Ch-CommandLineInterface.md'
   - Microservices:
       - './microservices/general/index.md'
       - Core Services:
