feat(adr): changes per @cloudxxx8 review
incorporation of recommendations on metrcis collection interval, and telemetry message structure.

also some typo cleanup

Signed-off-by: Jim White <jpwhite_mn@yahoo.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -134,6 +134,10 @@ markdown_extensions:
   - pymdownx.tabbed
   - pymdownx.superfences
   - pymdownx.mark
+  - pymdownx.critic
+  - pymdownx.caret
+  - pymdownx.mark
+  - pymdownx.tilde
   - attr_list
   # - mdx_truly_sane_lists
 extra:
