feat(examples): addition of example for RP4
points users to the exdgex-examples

Signed-off-by: Jim White <jpwhite_mn@yahoo.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -89,6 +89,7 @@ nav:
     - './examples/AppServiceExamples.md'
     - './examples/Ch-CommandingDeviceThroughRulesEngine.md'
     - './examples/Ch-ExamplesModbusdatatypeconversion.md'
+    - './examples/Ch-ExamplesRP4.md'
     - Adding a Device:
       - './examples/Ch-ExamplesAddingModbusDevice.md'
       - './examples/Ch-ExamplesAddingSNMPDevice.md'
