feat: Update Nav for Security
Moving the "Security" category on to the upper most level so that it
gets more attention.

fixes: #394

Signed-off-by: Beau Frusetta <beau.frusetta@intel.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -39,6 +39,13 @@ nav:
         - './getting-started/Ch-GettingStartedUsersNexus.md'
       - Tools:
         - './getting-started/tools/Ch-CommandLineInterface.md'
+  - Security:
+    - './security/Ch-Security.md'
+    - './security/Ch-SecretStore.md'
+    - './security/Ch-APIGateway.md'
+    - './security/Ch-AccessEdgeXRESTResources.md'
+    - './security/Ch-StartingSecurity.md'
+    - './security/Ch-SecurityIssues.md'
   - Microservices:
       - './microservices/general/index.md'
       - Core Services:
@@ -58,13 +65,6 @@ nav:
         - './microservices/system-management/Ch_SystemManagement.md'
         - './microservices/system-management/agent/Ch_SysMgmtAgent.md'
         - './microservices/system-management/executor/Ch_SysMgmtExecutor.md'
-      - Security:
-        - './microservices/security/Ch-Security.md'
-        - './microservices/security/Ch-SecretStore.md'
-        - './microservices/security/Ch-APIGateway.md'
-        - './microservices/security/Ch-AccessEdgeXRESTResources.md'
-        - './microservices/security/Ch-StartingSecurity.md'
-        - './microservices/security/Ch-SecurityIssues.md'
       - Devices Services:
         - './microservices/device/Ch-DeviceServices.md'
         - './microservices/device/profile/Ch-DeviceProfile.md'
