--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,14 +7,13 @@ site_url: 'https://edgexfoundry.github.io/edgex-docs/'
 repo_url: 'https://github.com/edgexfoundry/edgex-go'
 repo_name: 'edgex/edgex-go'
 copyright: 'Copyright &copy; 2020 EdgeX Foundry'
-google_analytics:
-  - 'UA-82811140-6'
-  - 'auto'
 strict: true
 theme:
   name: 'material'
   logo: 'assets/logo_edgex_white.png'
   favicon: 'assets/logo_edgex.png'
+  analytics:
+    gtag: 'G-38531ZZHBN'
   features:
     - tabs
 nav:
