feat(security): Add documentation about add-on service section
- Add new documentation section for configuring add-on services

Closes: #403

Signed-off-by: Jim Wang <yutsung.jim.wang@intel.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -45,6 +45,7 @@ nav:
     - './security/Ch-AccessEdgeXRESTResources.md'
     - './security/Ch-StartingSecurity.md'
     - './security/Ch-Secure-MessageBus.md'
+    - './security/Ch-Configuring-Add-On-Services.md'
     - './security/Ch-SecurityIssues.md'
   - Microservices:
       - './microservices/general/index.md'
