feat: add docs as one type of conventional commits docs should be supported as part of specs from conventional commit org.
Fixes: #406
Signed-off-by: Jim Wang <yutsung.jim.wang@intel.com>

--- a/.github/semantic.yml
+++ b/.github/semantic.yml
@@ -2,6 +2,7 @@ allowMergeCommits: true
 # Always validate the PR title AND all the commits
 titleAndCommits: true
 types:
+    - docs
     - feat
     - fix
     - style
