feat: update introduction page for v2
Signed-off-by: Jim White <jpwhite_mn@yahoo.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -150,5 +150,6 @@ extra:
 extra_css:
 - assets\stylesheets\version-select.css
 - assets\stylesheets\branding.css
+- assets\stylesheets\edgey.css
 extra_javascript:
 - assets\javascripts\version-select.js
