feat: Add new high level Getting Started section for App Services
closes #414

Signed-off-by: lenny <leonard.goodell@intel.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -72,6 +72,7 @@ nav:
         - './microservices/device/virtual/Ch-VirtualDevice.md'
       - Application Services:
         - Introduction: './microservices/application/ApplicationServices.md'
+        - Getting Started: './microservices/application/GettingStarted.md'
         - Triggers: './microservices/application/Triggers.md'
         - Application Functions SDK:
             - './microservices/application/ApplicationFunctionsSDK.md'
