feat(security): Add documentation section for securing Consul
- Add high level documentation for securing Consul service in EdgeX

Closes: #404

Signed-off-by: Jim Wang <yutsung.jim.wang@intel.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -46,6 +46,7 @@ nav:
     - './security/Ch-StartingSecurity.md'
     - './security/Ch-Secure-MessageBus.md'
     - './security/Ch-Configuring-Add-On-Services.md'
+    - './security/Ch-Secure-Consul.md'
     - './security/Ch-SecurityIssues.md'
   - Microservices:
       - './microservices/general/index.md'
