fix(ref): Security updates for Ireland
Signed-off-by: Bryon Nevis <bryon.nevis@intel.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -45,6 +45,8 @@ nav:
     - './security/Ch-Secure-MessageBus.md'
     - './security/Ch-Configuring-Add-On-Services.md'
     - './security/Ch-SecurityIssues.md'
+    - './security/secrets-config.md'
+    - './security/secrets-config-proxy.md'
   - Microservices:
       - './microservices/general/index.md'
       - Core Services:
