--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -109,20 +109,23 @@ nav:
       - 'walk-through/Ch-WalkthroughReading.md'
       - 'walk-through/Ch-WalkthroughExporting.md'
     - './examples/LinuxTutorial/LinuxTutorial.md'
-  - API Reference: 
+  - API Reference:
+    - Introduction: './api/Ch-APIIntroduction.md'
     - Core:
       - './api/core/Ch-APICoreCommand.md'
       - './api/core/Ch-APICoreData.md'
       - './api/core/Ch-APICoreMetadata.md'
-      - './api/core/Ch-APICoreServiceConfiguration.md'
-    - Supporting Services:
-      - './api/supporting/Ch-APISupportingServicesAlerts.md'
-      - './api/supporting/Ch-APISupportingServicesLogging.md'
-      - './api/supporting/Ch-APISupportingServicesRulesEngine.md'
-      - './api/supporting/Ch-APISupportingServicesScheduling.md'
-    - './api/Ch-APIDeviceSDK.md'
-    - './api/Ch-APISystemManagement.md'
-    - './api/Ch-APIAppFunctionsSDK.md'
+      - './api/core/Ch-APICoreConfigurationAndRegistry.md'
+    - Support:
+      - './api/support/Ch-APISupportNotifications.md'
+      - './api/support/Ch-APISupportScheduler.md'
+    - Management:
+      - './api/management/Ch-APISystemManagement.md'
+    - Device:
+        - './api/devices/Ch-APIDeviceSDK.md'
+    - Application:
+        - './api/applications/Ch-APIAppFunctionsSDK.md'
+        - './api/applications/Ch-APIRulesEngine.md'
   - Architectural Decision Records:
     - './design/README.md'
     - './design/TOC.md'
