feat: Update Common Config and add common migration
closes #453

Signed-off-by: lenny <leonard.goodell@intel.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -50,6 +50,10 @@ nav:
     - './security/secrets-config-proxy.md'
   - Microservices:
       - './microservices/general/index.md'
+      - Configuration & Registry:
+        - './microservices/configuration/CommonConfiguration.md'
+        - './microservices/configuration/ConfigurationAndRegistry.md'
+        - './microservices/configuration/V2MigrationCommonConfig.md'
       - Core Services:
         - './microservices/core/Ch-CoreServices.md'
         - './microservices/core/data/Ch-CoreData.md'
@@ -85,7 +89,6 @@ nav:
             - './microservices/application/AdvancedTopics.md'
         - './microservices/application/AppServiceConfigurable.md'
         - './microservices/application/GeneralAppServiceConfig.md'
-      - './microservices/configuration/Ch-Configuration.md'
   - Examples and Tutorials:
     - './examples/Ch-ExamplesVirtualDeviceService.md'
     - './examples/Ch-ExamplesSendingAndConsumingBinary.md'
