feat: Add app service migration guide.
closes #423

Signed-off-by: lenny <leonard.goodell@intel.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -89,6 +89,7 @@ nav:
             - './microservices/application/AdvancedTopics.md'
         - './microservices/application/AppServiceConfigurable.md'
         - './microservices/application/GeneralAppServiceConfig.md'
+        - './microservices/application/V2Migration.md'
   - Examples and Tutorials:
     - './examples/Ch-ExamplesVirtualDeviceService.md'
     - './examples/Ch-ExamplesSendingAndConsumingBinary.md'
