--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -52,6 +52,8 @@ nav:
       - './microservices/general/index.md'
       - Configuration & Registry:
         - './microservices/configuration/CommonConfiguration.md'
+        - './microservices/configuration/CommonCommandLineOptions.md'
+        - './microservices/configuration/CommonEnvironmentVariables.md'
         - './microservices/configuration/ConfigurationAndRegistry.md'
         - './microservices/configuration/V2MigrationCommonConfig.md'
       - Core Services:
