feat: Add top level migration guide
Also update core/support/sys-mgmt configuration section and added v2 migration section for each service's configuration.

closes #499

Signed-off-by: lenny <leonard.goodell@intel.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -50,6 +50,7 @@ nav:
     - './security/secrets-config-proxy.md'
   - Microservices:
       - './microservices/general/index.md'
+      - './microservices/V2TopLevelMigration.md'
       - Configuration & Registry:
         - './microservices/configuration/CommonConfiguration.md'
         - './microservices/configuration/CommonCommandLineOptions.md'
@@ -76,6 +77,7 @@ nav:
         - './microservices/device/profile/Ch-DeviceProfile.md'
         - './microservices/device/sdk/Ch-DeviceSDK.md'
         - './microservices/device/virtual/Ch-VirtualDevice.md'
+        - './microservices/device/V2Migration.md'
       - Application Services:
         - Introduction: './microservices/application/ApplicationServices.md'
         - Getting Started: './microservices/application/GettingStarted.md'
