feat: Addressed PR feedback from Jim W.
Signed-off-by: lenny <leonard.goodell@intel.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -19,6 +19,8 @@ theme:
 nav:
   - Introduction:
     - 'index.md'
+    - 'V2TopLevelMigration.md'
+
   - Getting Started:
       - './getting-started/index.md'
       - Quick Start: './getting-started/quick-start/index.md'
@@ -50,7 +52,6 @@ nav:
     - './security/secrets-config-proxy.md'
   - Microservices:
       - './microservices/general/index.md'
-      - './microservices/V2TopLevelMigration.md'
       - Configuration & Registry:
         - './microservices/configuration/CommonConfiguration.md'
         - './microservices/configuration/CommonCommandLineOptions.md'
