--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -162,5 +162,6 @@ extra_css:
 - assets\stylesheets\version-select.css
 - assets\stylesheets\branding.css
 - assets\stylesheets\edgey.css
+- assets\stylesheets\newexample.css
 extra_javascript:
 - assets\javascripts\version-select.js
