feat: remove non-Ireland examples
Mark to-be-updated examples with warnings

Add a page to point people to edgex-examples for other examples

Signed-off-by: jpwhitemn <jpwhite_mn@yahoo.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -93,12 +93,12 @@ nav:
         - './microservices/application/GeneralAppServiceConfig.md'
         - './microservices/application/V2Migration.md'
   - Examples and Tutorials:
+    - './examples/index.md'
     - './examples/Ch-ExamplesVirtualDeviceService.md'
     - './examples/Ch-ExamplesSendingAndConsumingBinary.md'
     - './examples/AppServiceExamples.md'
     - './examples/Ch-CommandingDeviceThroughRulesEngine.md'
     - './examples/Ch-ExamplesModbusdatatypeconversion.md'
-    - './examples/Ch-ExamplesRP4.md'
     - Adding a Device:
       - './examples/Ch-ExamplesAddingModbusDevice.md'
       - './examples/Ch-ExamplesAddingSNMPDevice.md'
@@ -114,7 +114,6 @@ nav:
       - 'walk-through/Ch-WalkthroughCommands.md'
       - 'walk-through/Ch-WalkthroughReading.md'
       - 'walk-through/Ch-WalkthroughExporting.md'
-    - './examples/LinuxTutorial/LinuxTutorial.md'
   - API Reference:
     - Introduction: './api/Ch-APIIntroduction.md'
     - Core:
