--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -47,6 +47,7 @@ nav:
     - './security/Ch-Configuring-Add-On-Services.md'
     - './security/Ch-Secure-Consul.md'
     - './security/Ch-SecurityIssues.md'
+    - './security/Ch-AddGatewayUserRemotely.md'
     - './security/secrets-config.md'
     - './security/secrets-config-proxy.md'
     - './security/SeedingServiceSecrets.md'
