feat: Document new Seeding Service Secrets capability
closes #586

Signed-off-by: Leonard Goodell <leonard.goodell@intel.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -49,6 +49,7 @@ nav:
     - './security/Ch-SecurityIssues.md'
     - './security/secrets-config.md'
     - './security/secrets-config-proxy.md'
+    - './security/SeedingServiceSecrets.md'
   - Microservices:
       - './microservices/general/index.md'
       - Configuration & Registry:
