feat(microservices): add documentation on the EdgeX UI
fixes: #298
Signed-off-by: jpwhitemn <jpwhite_mn@yahoo.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -39,6 +39,7 @@ nav:
         - './getting-started/Ch-GettingStartedUsersNexus.md'
       - Tools:
         - './getting-started/tools/Ch-CommandLineInterface.md'
+        - './getting-started/tools/Ch-GUI.md'
   - Security:
     - './security/Ch-Security.md'
     - './security/Ch-SecretStore.md'
