--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -75,6 +75,7 @@ nav:
         - './microservices/system-management/executor/Ch_SysMgmtExecutor.md'
       - Devices Services:
         - './microservices/device/Ch-DeviceServices.md'
+        - './microservices/device/Ch-DeviceServiceList.md'
         - './microservices/device/profile/Ch-DeviceProfile.md'
         - './microservices/device/sdk/Ch-DeviceSDK.md'
         - './microservices/device/virtual/Ch-VirtualDevice.md'
@@ -150,6 +151,7 @@ markdown_extensions:
   - pymdownx.superfences
   - pymdownx.mark
   - attr_list
+  - tables
   # - mdx_truly_sane_lists
 extra:
   social:
