feat(security): Create doc about CORS settings
Create a page to introduce CORS enabling
Close https://github.com/edgexfoundry/edgex-docs/issues/608

Signed-off-by: Cloud Tsai <cloudxxx8@gmail.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -52,6 +52,7 @@ nav:
     - './security/secrets-config.md'
     - './security/secrets-config-proxy.md'
     - './security/SeedingServiceSecrets.md'
+    - './security/Ch-CORS-Settings.md'
   - Microservices:
       - './microservices/general/index.md'
       - Configuration & Registry:
