fix: create intro page for getting started as a user
Signed-off-by: Farshid Tavakolizadeh <farshid.tavakolizadeh@canonical.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -25,6 +25,7 @@ nav:
       - Quick Start: './getting-started/quick-start/index.md'
       - Users:
         - './getting-started/Ch-GettingStartedUsers.md'
+        - './getting-started/Ch-GettingStartedUsersDocker.md'
         - './getting-started/Ch-GettingStartedSnapUsers.md'
       - Developers:
         - './getting-started/Ch-GettingStartedDevelopers.md'
