fix: Update remote device service example for Jakarta
Fixes #515

Signed-off-by: Bryon Nevis <bryon.nevis@intel.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -53,6 +53,8 @@ nav:
     - './security/secrets-config-proxy.md'
     - './security/SeedingServiceSecrets.md'
     - './security/Ch-CORS-Settings.md'
+    - './security/Ch-SSH-Tunneling-HowToSecureDeviceServices.md'
+    - './security/Ch-Docker-Swarm-SecuringDeviceServices.md'
   - Microservices:
       - './microservices/general/index.md'
       - Configuration & Registry:
