fix(ref): changed color of links and updated getting started version references
Fixes #655

If people don't like the colors, we can play with it in the links.css file

Signed-off-by: jpwhitemn <jpwhite_mn@yahoo.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -172,5 +172,6 @@ extra_css:
 - assets\stylesheets\branding.css
 - assets\stylesheets\edgey.css
 - assets\stylesheets\newexample.css
+- assets\stylesheets\links.css
 extra_javascript:
 - assets\javascripts\version-select.js
