fix(all): add htmlproofer to mkdocs and fix broken links
fixes:#669
Signed-off-by: jpwhitemn <jpwhite_mn@yahoo.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -179,3 +179,7 @@ extra_css:
 - assets\stylesheets\newexample.css
 extra_javascript:
 - assets\javascripts\version-select.js
+plugins:
+  - search
+  ## uncomment the next line to run the HTML Proofer in development to check for bad links
+  #- htmlproofer
