--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -158,6 +158,7 @@ markdown_extensions:
   - admonition
   - pymdownx.tabbed:
       alternate_style: true
+  - pymdownx.details
   - pymdownx.superfences
   - pymdownx.mark
   - pymdownx.critic
