feat: Extend snap getting started docs (#751)
* Move the documentation of snaps from READMEs
* Updates to describe EdgeX 2.2 app options
* Other additions

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -155,6 +155,7 @@ markdown_extensions:
   - admonition
   - pymdownx.tabbed:
       alternate_style: true
+  - pymdownx.details
   - pymdownx.superfences
   - pymdownx.mark
   - pymdownx.critic
