feat: add native getting started to docs menu
Signed-off-by: jpwhitemn <jpwhite_mn@yahoo.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -32,6 +32,7 @@ nav:
         - './getting-started/Ch-GettingStartedGoDevelopers.md'
         - './getting-started/Ch-GettingStartedCDevelopers.md'
         - './getting-started/Ch-GettingStartedHybrid.md'
+        - './getting-started/Ch-NativeBuildAndRun.md'
         - Application Functions SDK: './getting-started/ApplicationFunctionsSDK.md'
         - Device Services:
           - './getting-started/Ch-GettingStartedSDK.md'
